@@ -179,6 +179,7 @@ public class OAuthAsyncCompletionHandlerTest {
 
         @Override
         public String convert(Response response) throws IOException {
+            response.close();
             return "All good";
         }
     }
@@ -187,6 +188,7 @@ public class OAuthAsyncCompletionHandlerTest {
 
         @Override
         public String convert(Response response) throws IOException {
+            response.close();
             throw new IOException("Failed to convert");
         }
     }
@@ -195,6 +197,7 @@ public class OAuthAsyncCompletionHandlerTest {
 
         @Override
         public String convert(Response response) throws IOException {
+            response.close();
             throw new OAuthException("bad oauth");
         }
     }
